--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </li>
       </ul>
     </footer>
-  </section>
+  </section> -->
 
   <section class="s-hero">
 
@@ -224,7 +224,7 @@
               <a href="#" class="btn btn-primary"><img src="./assets/icon-perfil.svg" alt="">Jogue agora</a>
             </div>
 
-            <div class="rigth-content">
+            <div class="right-content">
               <div class="logo">
                 <img src="./assets/logo-default-diablo-iv.png" alt="">
               </div>
@@ -255,7 +255,7 @@
                 pré-venda</a>
             </div>
 
-            <div class="rigth-content">
+            <div class="right-content">
               <div class="logo">
                 <img src="./assets/logo-default-hearthstone.png" alt="">
               </div>
@@ -286,7 +286,7 @@
                 pré-venda</a>
             </div>
 
-            <div class="rigth-content">
+            <div class="right-content">
               <div class="logo">
                 <img src="./assets/logo-default-ww.png" alt="">
               </div>
@@ -312,7 +312,7 @@
     </div>
 
   </section>
-
+  <!-- 
   <section class="s-games">
     <div class="container">
       <div class="top">
@@ -321,7 +321,7 @@
           <h2>Jogos exclusivos</h2>
         </div>
 
-        <div class="rigth-top">
+        <div class="right-top">
 
           <ul class="filtro">
             <li>
