--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/plugins.css">
   <link rel="stylesheet" href="./css/main.css">
   <title>Blizzard</title>
@@ -18,7 +17,7 @@
   <header>
     <div class="container">
       <a href="#" class="logo">
-        <img src="./assets/logo.svg" alt="Logo Blizzard">
+        <img src="./assets/logo-blizzard.svg" alt="Logo Blizzard">
       </a>
       <nav>
         <ul class="menu-links">
@@ -312,7 +311,7 @@
     </div>
 
   </section>
-  <!-- 
+  
   <section class="s-games">
     <div class="container">
       <div class="top">
@@ -867,7 +866,7 @@
     </div>
   </section>
 
-  <section class="s-download">
+  <!-- <section class="s-download">
     <div class="overlay">
       <div class="container">
 
