--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/plugins.css">
   <link rel="stylesheet" href="./css/main.css">
   <title>Blizzard</title>
@@ -311,7 +312,7 @@
     </div>
 
   </section>
-  
+
   <section class="s-games">
     <div class="container">
       <div class="top">
@@ -496,7 +497,7 @@
           </li>
 
           <li>
-            <a href="#" class="game-card all-games">
+            <a href="#" class="game-card-allGames">
               <img src="./assets/logo.svg" alt="">
               <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
             </a>
