--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/plugins.css">
   <link rel="stylesheet" href="./css/main.css">
   <title>Blizzard</title>
@@ -498,7 +497,7 @@
 
           <li>
             <a href="#" class="game-card-allGames">
-              <img src="./assets/logo.svg" alt="">
+              <img src="./assets/logo-blizzard.svg" alt="">
               <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
             </a>
           </li>
@@ -560,6 +559,18 @@
             </a>
           </li>
 
+          <li>
+            <a href="" class="game-card">
+              <div class="image">
+                <img class="logo-card" src="./assets/card-logo-heroes-of-storm.png" alt="Logo Heroes of storm">
+                <img class="image-card" src="./assets/card-game-06.jpg" alt="Card Heroes of storm">
+              </div>
+              <div class="info">
+                <h3>Heroes of storm</h3>
+                <p>RPG de ação</p>
+              </div>
+            </a>
+          </li>
 
 
           <li>
@@ -616,8 +627,8 @@
           </li>
 
           <li>
-            <a href="#" class="game-card all-games">
-              <img src="./assets/logo.svg" alt="">
+            <a href="#" class="game-card-allGames">
+              <img src="./assets/logo-blizzard.svg" alt="">
               <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
             </a>
           </li>
@@ -663,8 +674,8 @@
           </li>
 
           <li>
-            <a href="#" class="game-card all-games">
-              <img src="./assets/logo.svg" alt="">
+            <a href="#" class="game-card-allGames">
+              <img src="./assets/logo-blizzard.svg" alt="">
               <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
             </a>
           </li>
@@ -750,8 +761,8 @@
           </li>
 
           <li>
-            <a href="#" class="game-card all-games">
-              <img src="./assets/logo.svg" alt="">
+            <a href="#" class="game-card-allGames">
+              <img src="./assets/logo-blizzard.svg" alt="">
               <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
             </a>
           </li>
@@ -856,8 +867,8 @@
           </li>
 
           <li>
-            <a href="#" class="game-card all-games">
-              <img src="./assets/logo.svg" alt="">
+            <a href="#" class="game-card-allGames">
+              <img src="./assets/logo-blizzard.svg" alt="">
               <span><img src="./assets/icon-group-white.svg" alt="">Ver todos jogos</span>
             </a>
           </li>
@@ -867,7 +878,7 @@
     </div>
   </section>
 
-  <!-- <section class="s-download">
+  <section class="s-download">
     <div class="overlay">
       <div class="container">
 
@@ -948,7 +959,7 @@
 
       </div>
     </div>
-  </section> -->
+  </section>
 
   <script src="./js/plugins.js"> </script>
   <script src="./js/all.js"></script>
