--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </header>
 
-  <!-- <section class="menu-games">
+  <section class="menu-games">
     <div class="area-menu container">
       <ul class="pane-games">
         <li>
@@ -188,7 +188,7 @@
         </li>
       </ul>
     </footer>
-  </section> -->
+  </section>
 
   <section class="s-hero">
 
@@ -308,6 +308,10 @@
         </div>
 
       </div>
+    </div>
+
+    <div class="swiper-progress-bar">
+      <span class="slide-progress-bar"></span>
     </div>
 
   </section>
